fix entrance overflow styling

--- a/client/src/ui/Entrance/entrance.scss
+++ b/client/src/ui/Entrance/entrance.scss
@@ -16,7 +16,7 @@
         display:none;
     }
     .banner {
-        height: 20%;
+        height: 15%;
         width: 100%;
         position: relative;
         img {
@@ -61,7 +61,7 @@
         }
     }
     .user-form {
-        height: 53%;
+        height: 58%;
         width: 100%;
         form {
             display: flex;
